# bingo

./: README.md  create_pdf.py  delegation.json  pyproject.toml
