[tool.poetry]
name = "bingo"
version = "0.1.0"
description = ""
authors = ["lucien.chassin <lucien.chassin31@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fpdf = "^1.7.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
